--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 	</pluginRepositories>
 	<dependencies>
 		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.zkoss.addon</groupId>
 			<artifactId>flashchart</artifactId>
 			<version>1.0</version>
