--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 	</pluginRepositories>
 	<dependencies>
 		<dependency>
+			<groupId>org.beanshell</groupId>
+			<artifactId>bsh</artifactId>
+			<version>2.0b5</version>
+		</dependency>
+		<dependency>
 			<groupId>xmlpull</groupId>
 			<artifactId>xmlpull</artifactId>
 			<version>1.1.3.4d_b4_min</version>
